flapivor/tests/m3/hopix/typechecker/bad/39-record-matching-06.hopix
type T<a> = { x : a }

val main : Int = case { x = 0 }<Int> { { x = (_ : String) }<String> => 0 }